chore: fix SonarQube errors (dependency locking, cognitive complexity, and code quality)